# 80HD

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/agents/: knowledge-maintainer.md
.claude/context/: musashi-mentor-vision.md
.claude/hooks/: trigger-docs-update.sh  (+1 more)
80HD.xcodeproj/: project.pbxproj
agents/: IMPLEMENTATION_STATUS.md  README.md  __init__.py  assessment.md  control.py  requirements.txt
docs/: README.md  ai-services.md  discovery.md  frontend.md  ingestion.md  operations.md  security.md  vector-pipeline.md
knowledge-base/: README.md  TEMPLATE.md
litellm-proxy/: README.md  check_coralogix_health.py  complexity_router.py  generate_virtual_key.sh  install_launchagent.sh  litellm.sh  litellm_config.yaml  manage_proxy.sh  monitor_logs.sh  requirements.txt  run_otelcol_debug.sh  run_proxy.sh  uninstall_launchagent.sh
macos/: 80HDApp.swift  AppDelegate.swift  DEVELOPER_GUIDE.md  README.md  RELEASE_NOTES.md  SCOPE_v0.0.1.md  TESTING_CHECKLIST.md  USER_GUIDE.md
mcp-servers/gcp-vertex-infra/: .env.example  QUICKSTART.md  README.md  pyproject.toml
mcp-servers/gcp-vertex-infra/src/mcp_gcp_vertex/: __init__.py  config.py  server.py
mcp-servers/gcp-vertex-infra/src/mcp_gcp_vertex/db/: models.py  supabase.py
mcp-servers/gcp-vertex-infra/src/mcp_gcp_vertex/providers/: base.py  gcp.py
mcp-servers/gcp-vertex-infra/src/mcp_gcp_vertex/tools/: api_keys.py  provision.py
mcp-servers/gcp-vertex-infra/src/mcp_gcp_vertex/utils/: auth.py  kb_updater.py
observability/: otelcol-debug.yaml
(+213 files in other folders)
